--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="conteudo">
         <article class="topico">
             <h2>Quem sou eu?</h2>
-            <p>Me chamo Alan Tesseroli, nasci e cresci em uma cidadezinha no interior do estado do Paraná, chamada Palmas, no decorrer de minha história exerci as mais diversas profissões, dentre elas: faxineiro, vendedor, desenvolvedor de sites e artes gráficas. Minha vivência me permitiu conhecer mais a respeito de questões jurídicas, contábeis, tecnológicas (relacionadas a programação de protótipos de robôs a montagem e conserto de computadores) e de design (mais informações podem ser encontradas na aba <a href="historia.html" class="enderecamento">história</a>).</p>
+            <p>Me chamo Alan Tesseroli, nasci e cresci em uma cidadezinha no interior do estado do Paraná, chamada Palmas, posso dizer que meus principais conhecimentos se originaram da minha curiosidade em apender e necessidade de desenvolver algo diferente. Nos ultimos 2 anos venho utilizando fortemente as linguagens de programação HTML5 e CSS3, não obstante, já fui participante de olimpíadas de robótica pelo IFPR (mais informações podem ser encontradas na aba <a href="historia.html" class="enderecamento">história</a>).</p>
         </article>
 
         <article class="topico">
@@ -37,6 +37,11 @@
             <p>Adicionar imagens com redirecionamento</p>
         </article>
         
+        <article class="topico">
+            <h2>Motivos de contratação</h2>
+            <p>Dentre meus já pontuados conhecimentos sobre HTML5, CSS3, JavaScript e Python, também possuo inglês nível intermediário/avançado (<abbr title="International English Language Testing System (IELTS)">IELTS</abbr> 6.5), em virtude de já ter trabalhado no ambiente comercia tenho uma vasta noção de trabalho em equipe. Por fim, gostaria de salientar que não busco apenas uma vaga como programador junior, mas até mesmo como estagiário.</p>
+        </article>
+
         <article class="topico">
             <h2>Contato</h2>
             <a href="mailto:alantesseroli@gmail.com" class="enderecamento"><img src="images/email.png" alt="" class="imagemlogo"></a>
