--- a/contato.html
+++ b/contato.html
@@ -21,11 +21,16 @@
     <main class="conteudo">
         <article class="topico">
             <h2>Contato</h2>
-            <p><img src="images/email.png" alt="" class="imagemlogo">    Email: <a href="mailto:alantesseroli@gmail.com" class="enderecamento">alantesseroli@gmail.com</a></p>
-            <p><img src="images/telefone.png" alt="" class="imagemlogo">    Telefone: <strong style="color: white;">(46) 99942-9802</strong></p>
-            <p><img src="images/git.png" alt="" class="imagemlogo">    <a href="https://github.com/alantesseroli" target="_blank" ref="external" class="enderecamento">Repositório no Github</a></p>
-            <p><img src="images/linkedin.png" alt="" class="imagemlogo">    <a href="https://www.linkedin.com/in/alan-tesseroli-ba2546215/" target="_blank" ref="external" class="enderecamento">LinkedIn</a></p>
-            <p><img src="images/insta.png" alt="" class="imagemlogo">    <a href="https://www.instagram.com/alan_tesse/?hl=pt-br" target="_blank" ref="external" class="enderecamento">Instagram: alan_tesse</a></p>
+            <a href="mailto:alantesseroli@gmail.com" class="enderecamento"><img src="images/email.png" alt="" class="imagemlogocontato"></a>
+
+            <a href="https://github.com/alantesseroli" target="_blank" ref="external" class="enderecamento"><img src="images/git.png" alt="" class="imagemlogocontato"></a> 
+            
+            <a href="https://www.linkedin.com/in/alan-tesseroli-ba2546215/" target="_blank" ref="external" class="enderecamento"><img src="images/linkedin.png" alt="" class="imagemlogocontato"></a>
+            
+            <a href="https://www.instagram.com/alan_tesse/?hl=pt-br" target="_blank" ref="external" class="enderecamento"><img src="images/insta.png" alt="" class="imagemlogocontato"></a>
+
+            <a href="https://api.whatsapp.com/send?phone=5546999429802&text=Ol%C3%A1,%20Alan!%0ATudo%20bem?%0AGostei%20muito%20de%20seu%20portif%C3%B3lio,%20poder%C3%ADamos%20agendar%20uma%20reuni%C3%A3o%20para%20conversarmos%20sobre%20a%20possibilidade%20de%20um%20emprego?" target="_blank" ref="external" class="enderecamento"><img src="images/telefone.png" alt="" class="imagemlogocontato"></a>
+
         </article>
 
 
