--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,11 @@
                 <h3>Trabalhos com Photoshop e CorelDraw</h3>
                 <p>Adicionar imagens com redirecionamento</p>
                 <h3>Trabalhos com HTML, CSS e JavaScript</h3>
-                <p>Adicionar imagens com redirecionamento</p>
+                    <a href="https://github.com/AlanTesseroli/cooffeshop" target="_blank" ref="external"><img src="images/coffeeshop.png" alt="" class="trabalho"></a>
+
+                    <a href="https://github.com/AlanTesseroli/SagginProtese" target="_blank" ref="external"><img src="images/sagginprotese.png" alt="" class="trabalho"></a>
+
+                    <a href="https://github.com/AlanTesseroli/HTML/blob/main/desafio%202%20a.html" target="_blank" ref="external"><img src="images/siteexercicio.png" alt="" class="trabalho"></a>
                 <h3>Trabalhos com Python</h3>
                 <p>Adicionar imagens com redirecionamento</p>
         </article>
