--- a/portfolio.html
+++ b/portfolio.html
@@ -20,17 +20,32 @@
 
     <main class="conteudo">
         <article class="topico">
+
+                <h2>Repositório GitHub</h2>
+
+                <a href="https://github.com/alantesseroli" target="_blank" ref="external" class="enderecamento"><img src="images/github.png" alt="" class="imagemlogo"></a> 
+
             <h2>Portifólio</h2>
                 <h3>Trabalhos com Photoshop e CorelDraw</h3>
-                <p>Adicionar imagens com redirecionamento</p>
-                <h3>Trabalhos com HTML, CSS e JavaScript</h3>
-                    <a href="https://github.com/AlanTesseroli/cooffeshop" target="_blank" ref="external"><img src="images/coffeeshop.png" alt="" class="trabalho"></a>
+                    <img src="images/corel1.jpg" alt="Site" class="trabalho">
 
-                    <a href="https://github.com/AlanTesseroli/SagginProtese" target="_blank" ref="external"><img src="images/sagginprotese.png" alt="" class="trabalho"></a>
+                    <img src="images/corel2.jpg" alt="Site" class="trabalho">
 
-                    <a href="https://github.com/AlanTesseroli/HTML/blob/main/desafio%202%20a.html" target="_blank" ref="external"><img src="images/siteexercicio.png" alt="" class="trabalho"></a>
+                    <img src="images/corel3.jpg" alt="Site" class="trabalho">
+                
+                    <h3>Trabalhos com HTML, CSS e JavaScript</h3>
+                    <a href="https://github.com/AlanTesseroli/cooffeshop" target="_blank" ref="external"><img src="images/coffeeshop.png" alt="Site" class="trabalho"></a>
+
+                    <a href="https://github.com/AlanTesseroli/SagginProtese" target="_blank" ref="external"><img src="images/sagginprotese.png" alt="Site" class="trabalho"></a>
+
+                    <a href="https://github.com/AlanTesseroli/HTML/blob/main/desafio%202%20a.html" target="_blank" ref="external"><img src="images/siteexercicio.png" alt="Site Exercicio HTML" class="trabalho"></a>
                 <h3>Trabalhos com Python</h3>
-                <p>Adicionar imagens com redirecionamento</p>
+                <a href="https://github.com/AlanTesseroli/CV_Python" target="_blank" ref="external"><img src="images/python1.png" alt="Exercícios Python" class="trabalho"></a>
+
+                <a href="https://github.com/AlanTesseroli/CV_Python" target="_blank" ref="external"><img src="images/python2.png" alt="Exercícios Python" class="trabalho"></a>
+
+                <a href="https://github.com/AlanTesseroli/CV_Python" target="_blank" ref="external"><img src="images/python3.png" alt="Exercícios Python" class="trabalho"></a>
+
         </article>
 
 
