--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alan Tesseroli</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -24,7 +25,7 @@
     </article>
 
     <main class="conteudo">
-        <article class="topico">
+        <article id="eu">
             <h2>Quem sou eu?</h2>
             <p>Me chamo Alan Tesseroli, nasci e cresci em uma cidadezinha no interior do estado do Paraná, chamada Palmas, posso dizer que meus principais conhecimentos se originaram da minha curiosidade em apender e necessidade de desenvolver algo diferente. Nos ultimos 2 anos venho utilizando fortemente as linguagens de programação HTML5 e CSS3, não obstante, já fui participante de olimpíadas de robótica pelo IFPR (mais informações podem ser encontradas na aba <a href="historia.html" class="enderecamento">história</a>).</p>
         </article>
@@ -97,4 +98,5 @@
         <p>Site criado por Alan Tesseroli</p>
     </footer>
 </body>
+<script src="javascript.js"></script>
 </html>
