Criação de um switch de modo escuro/diurno

--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
             <a href="historia.html" class="navigation">História</a>
             <a href="portfolio.html" class="navigation">Portifólio</a>
             <a href="contato.html" class="navigation">Contato</a>
+
         </nav>
+            
+
     </header>
+
+    <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="checkbox">
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"></div>
+      </label>
+      <em>Enable Dark Mode!</em>
+    </div>
 
     <article class="logo">
         <h1>Alan Tesseroli</h1>
