--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Desenvolvedor Júnior</p>
     </article>
 
-    <main class="conteudo">
+    <main class="conteudo" id="tema1">
         <article id="eu">
             <h2>Quem sou eu?</h2>
             <p>Me chamo Alan Tesseroli, nasci e cresci em uma cidadezinha no interior do estado do Paraná, chamada Palmas, posso dizer que meus principais conhecimentos se originaram da minha curiosidade em apender e necessidade de desenvolver algo diferente. Nos ultimos 2 anos venho utilizando fortemente as linguagens de programação HTML5 e CSS3, não obstante, já fui participante de olimpíadas de robótica pelo IFPR (mais informações podem ser encontradas na aba <a href="historia.html" class="enderecamento">história</a>).</p>
