Ajustes Scroll Reveal

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </article>
 
 
-        <article class="topico">
+        <article class="topico" id="logos">
             <h2>Contato</h2>
             <a href="mailto:alantesseroli@gmail.com" class="enderecamento"><img src="images/email.png" alt="" class="imagemlogo"></a>
 
