--- a/index.html
+++ b/index.html
@@ -54,18 +54,14 @@
         <article class="topico"  id="tema1">
             <h2>CONHECIMENTOS</h2>
             
-            <div class="lista">
-                <ul>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>JavaScript</li>
-                    <li>Python</li>
-                    <li>Git e Github</li>
-                    <li>Inglês Intermediário/Avançado</li>
-                    <li>Arduino</li>
-                    <li>CorelDraw</li>
-                    <li>Photoshop</li>
-                </ul>
+            <div class="logopl">
+                <img src="images/logopl/html.png" alt="logo css3" id="imgpl">
+                <img src="images/logopl/css.png" alt="logo css3" id="imgpl">
+                <img src="images/logopl/js.png" alt="logo css3" id="imgpl">
+                <img src="images/logopl/python.png" alt="logo css3" id="imgpl">
+                <img src="images/logopl/php.png" alt="logo css3" id="imgpl">
+                <img src="images/logopl/git.png" alt="logo css3" id="imgpl">
+                <img src="images/logopl/ielts.png" alt="logo css3" id="imgpl">
             </div>
         </article>
 
