Ajustando outras páginas

--- a/historia.html
+++ b/historia.html
@@ -18,6 +18,14 @@
         </nav>
     </header>
 
+    <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="checkbox">
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"></div>
+      </label>
+      <em id="darkmode">Enable Dark Mode!</em>
+    </div>
+
     <main class="conteudo">
         <article class="topico">
             <h2>Minha história</h2>
@@ -39,4 +47,5 @@
         <p>Site criado por Alan Tesseroli</p>
     </footer>
 </body>
+<script src="javascript.js"></script>
 </html>
