--- a/historia.html
+++ b/historia.html
@@ -45,5 +45,6 @@
     <footer>
         <p>Site criado por Alan Tesseroli</p>
     </footer>
+    <script src="javascript.js"></script>
 </body>
 </html>
