--- a/historia.html
+++ b/historia.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alan Tesseroli - História</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -27,7 +28,7 @@
     </div>
 
     <main class="conteudo">
-        <article class="topico">
+        <article class="topico" id="historia">
             <h2>Minha história</h2>
             <p>Me chamo Alan Tesseroli, nasci e cresci em uma cidadezinha no interior do estado do Paraná, chamada Palmas, no decorrer de minha história exerci as mais diversas profissões, dentre elas: faxineiro, vendedor, desenvolvedor de sites e artes gráficas. Minha vivência me permitiu conhecer mais a respeito de questões jurídicas, contábeis, tecnológicas (relacionadas a programação de protótipos de robôs a montagem e conserto de computadores) e de design.
             <p>Com relação ao ramo da tecnologia, posso dizer que meus principais conhecimentos se originaram da minha curiosidade em apender e necessidade de desenvolver algo diferente. Nos ultimos 2 anos venho utilizando fortemente duas ferramentas de edição (CorelDraw e Photoshop), pois, atuei como freelancer em uma empresa familiar do ramo fotográfico, onde desenvolvia alguns tipos de arte, bem como, trabalhava com a impressão de fotos e documentos.</p>
