--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alan Tesseroli - História</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -18,8 +19,16 @@
         </nav>
     </header>
 
+    <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="checkbox">
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"></div>
+      </label>
+      <em id="darkmode">Enable Dark Mode!</em>
+    </div>
+
     <main class="conteudo">
-        <article class="topico">
+        <article class="topico" id="portifolio">
 
             <h2>Portifólio</h2>
                 <h3>Trabalhos com Photoshop e CorelDraw</h3>
@@ -50,5 +59,6 @@
     <footer>
         <p>Site criado por Alan Tesseroli</p>
     </footer>
+    <script src="javascript.js"></script>
 </body>
 </html>
