--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
     </div>
 
     <main class="conteudo">
-        <article class="topico">
+        <article class="topico" id="contact">
             <h2>Contato</h2>
             <a href="mailto:alantesseroli@gmail.com" class="enderecamento"><img src="images/email.png" alt="" class="imagemlogocontato"></a>
 
