--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,7 @@
             <input type="checkbox" id="checkbox" />
             <div class="slider round"></div>
       </label>
-      <em id="darkmode">Enable Dark Mode!</em>
+      <em id="darkmode">Modo Noturno!</em>
     </div>
 
     <main class="conteudo">
