--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="checkbox" id="checkbox" />
             <div class="slider round"></div>
       </label>
-      <em id="darkmode">Enable Dark Mode!</em>
+      <em id="darkmode">Modo Noturno!</em>
     </div>
 
     <article class="logo">
