--- a/historia.html
+++ b/historia.html
@@ -28,17 +28,25 @@
     </div>
 
     <main class="conteudo">
-        <article class="topico" id="historia">
+        <article class="topico">
             <h2>Minha história</h2>
-            <p>Me chamo Alan Tesseroli, nasci e cresci em uma cidadezinha no interior do estado do Paraná, chamada Palmas, no decorrer de minha história exerci as mais diversas profissões, dentre elas: faxineiro, vendedor, desenvolvedor de sites e artes gráficas. Minha vivência me permitiu conhecer mais a respeito de questões jurídicas, contábeis, tecnológicas (relacionadas a programação de protótipos de robôs a montagem e conserto de computadores) e de design.
-            <p>Com relação ao ramo da tecnologia, posso dizer que meus principais conhecimentos se originaram da minha curiosidade em apender e necessidade de desenvolver algo diferente. Nos ultimos 2 anos venho utilizando fortemente duas ferramentas de edição (CorelDraw e Photoshop), pois, atuei como freelancer em uma empresa familiar do ramo fotográfico, onde desenvolvia alguns tipos de arte, bem como, trabalhava com a impressão de fotos e documentos.</p>
-            <p>Não obstante, tenho certa afinidade com o ramo matemático, em vitrude de ter cursado (ainda que por apenas alguns semestres) as faculdades de ciências contábeis e engenharia civil e, principalmente, por estar cursando análise e desenvolvimento de sistemas. Também é interessante acrescnertar que boa parte de meu conhecimento provém de maneira autodidata, ou seja, quase tudo que aprendi nos ultimos anos, aprendi por conta própria (tanto a programação quanto outras línguas).</p>
+                <article id="historia">
+                    <p>Me chamo Alan Tesseroli, nasci e cresci em uma cidadezinha no interior do estado do Paraná, chamada Palmas, no decorrer de minha história exerci as mais diversas profissões, dentre elas: faxineiro, vendedor, desenvolvedor de sites e artes gráficas. Minha vivência me permitiu conhecer mais a respeito de questões jurídicas, contábeis, tecnológicas (relacionadas a programação de protótipos de robôs a montagem e conserto de computadores) e de design.
+                    <p>Com relação ao ramo da tecnologia, posso dizer que meus principais conhecimentos se originaram da minha curiosidade em apender e necessidade de desenvolver algo diferente. Nos ultimos 2 anos venho utilizando fortemente duas ferramentas de edição (CorelDraw e Photoshop), pois, atuei como freelancer em uma empresa familiar do ramo fotográfico, onde desenvolvia alguns tipos de arte, bem como, trabalhava com a impressão de fotos e documentos.</p>
+                    <p>Não obstante, tenho certa afinidade com o ramo matemático, em vitrude de ter cursado (ainda que por apenas alguns semestres) as faculdades de ciências contábeis e engenharia civil e, principalmente, por estar cursando análise e desenvolvimento de sistemas. Também é interessante acrescnertar que boa parte de meu conhecimento provém de maneira autodidata, ou seja, quase tudo que aprendi nos ultimos anos, aprendi por conta própria (tanto a programação quanto outras línguas).</p>
+                </article>
+        </article>
+        <article class="topico" id="historiascolums">
             <h2>Conhecimentos complementares</h2>
             <p>Como pontos complementares, é interessante salientar meu prazer com a escrita, bem como, alguns anos desenvolvendo projetos de robótica no Instituto Federal do Paraná na ala conhecida como IfLab. Ademais, em virtude de nos encontrarmos em uma área que leva muito em conta os conhecimentos de linguas estrangeiras, realizei o <abbr title="International English Language Testing System (IELTS)">IELTS</abbr> (proficiência na lingua inglesa) e tenho como nota média 6.5 (intermediário/avançado).</p>
+        </article>
+        <article class="topico">
             <h2>Minha atuação como programador</h2>
-            <p>Este jovem tem um conjunto sólido de habilidades técnicas em várias tecnologias da web, incluindo Git e GitHub, HTML5, CSS3, JavaScript e Python. Essas habilidades são altamente valorizadas em muitas empresas de tecnologia e podem ser aplicadas em uma variedade de projetos.</p>
-            <p>Possuo conhecimento em Git e GitHub, ou seja, tenho compreensão do controle de versão e colaboração em equipe, o que pode ser benéfico para a cultura da empresa. Ademais, em virtude de minha vontade de conhecer, desenvolvi habilidades em HTML5, CSS3 e JavaScript me permitindo ampliar meu conhecimento em desenvolvimento web e possobilidade a construção de sites e aplicativos.</p>
-            <p>Por fim, o conhecimento em Python adquiri através do desenvolvimento de exercícios e leitura de alguns livros relacionados ao tema, pois essa linguagem é amplamente utilizada em áreas como análise de dados e inteligência artificial. Com essa habilidade, busco trazer valor adicional à empresa, ajudando em projetos em áreas como automação de processos e análise de dados.</p>
+            <article id="historia">
+                <p>Este jovem tem um conjunto sólido de habilidades técnicas em várias tecnologias da web, incluindo Git e GitHub, HTML5, CSS3, JavaScript e Python. Essas habilidades são altamente valorizadas em muitas empresas de tecnologia e podem ser aplicadas em uma variedade de projetos.</p>
+                <p>Possuo conhecimento em Git e GitHub, ou seja, tenho compreensão do controle de versão e colaboração em equipe, o que pode ser benéfico para a cultura da empresa. Ademais, em virtude de minha vontade de conhecer, desenvolvi habilidades em HTML5, CSS3 e JavaScript me permitindo ampliar meu conhecimento em desenvolvimento web e possobilidade a construção de sites e aplicativos.</p>
+                <p>Por fim, o conhecimento em Python adquiri através do desenvolvimento de exercícios e leitura de alguns livros relacionados ao tema, pois essa linguagem é amplamente utilizada em áreas como análise de dados e inteligência artificial. Com essa habilidade, busco trazer valor adicional à empresa, ajudando em projetos em áreas como automação de processos e análise de dados.</p>
+            </article>
         </article>
 
     </main>
