--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h3>Trabalhos com HTML, CSS e JavaScript</h3>
                 <a href="https://github.com/AlanTesseroli/cooffeshop" target="_blank" ref="external"><img src="images/coffeeshop.png" alt="" class="trabalho" id="logos"></a>
 
-                <a href="https://github.com/AlanTesseroli/SagginProtese" target="_blank" ref="external"><img src="images/sagginprotese.png" alt="" class="trabalho" id="logos"></a>
+                <a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"><img src="images/sagginprotese.png" alt="" class="trabalho" id="logos"></a>
 
         </article>
 
