--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="checkbox" id="checkbox" />
             <div class="slider round"></div>
       </label>
-      <em id="darkmode">Modo Noturno!</em>
+      <em id="darkmode"><strong>Modo Noturno!</strong></em>
     </div>
 
     <article class="logo">
@@ -38,7 +38,7 @@
     <main class="conteudo">
         <article id="eu">
             <h2>Quem sou eu?</h2>
-            <p>Me chamo Alan Tesseroli, nasci e cresci em uma cidadezinha no interior do estado do Paraná, chamada Palmas, posso dizer que meus principais conhecimentos se originaram da minha curiosidade em apender e necessidade de desenvolver algo diferente. Nos ultimos 2 anos venho utilizando fortemente as linguagens de programação HTML5 e CSS3, não obstante, já fui participante de olimpíadas de robótica pelo IFPR (mais informações podem ser encontradas na aba <a href="historia.html" class="enderecamento">história</a>).</p>
+            <p>Me chamo <strong>Alan Tesseroli</strong>, nasci e cresci em uma cidadezinha no interior do estado do Paraná, chamada <strong>Palmas</strong>, posso dizer que meus principais conhecimentos se originaram da minha <strong>curiosidade em apender</strong> e necessidade de desenvolver algo diferente. Nos ultimos 2 anos venho utilizando fortemente as linguagens de programação <strong>HTML5 e CSS3</strong>, não obstante, já fui participante de <strong>olimpíadas de robótica</strong> pelo IFPR (mais informações podem ser encontradas na aba <a href="historia.html" class="enderecamento">história</a>).</p>
         </article>
 
         
