--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,9 @@
                 <h3>Trabalhos com Photoshop e CorelDraw</h3>
                     <img src="images/corel1.jpg" alt="Site" class="trabalho">
 
-                    <img src="images/corel2.jpg" alt="Site" class="trabalho">
+                    <img src="images/Corel2.jpg" alt="Site" class="trabalho">
 
-                    <img src="images/corel3.jpg" alt="Site" class="trabalho">
+                    <img src="images/Corel3.jpg" alt="Site" class="trabalho">
                 
                     <h3>Trabalhos com HTML, CSS e JavaScript</h3>
                     <a href="https://github.com/AlanTesseroli/cooffeshop" target="_blank" ref="external"><img src="images/coffeeshop.png" alt="Site" class="trabalho"></a>
