--- a/historia.html
+++ b/historia.html
@@ -36,9 +36,11 @@
                     <p>Não obstante, tenho certa afinidade com o ramo <strong>matemático</strong>, em vitrude de ter cursado (ainda que por apenas alguns semestres) as faculdades de <strong>ciências contábeis</strong> e <strong>engenharia civil</strong> e, principalmente, por estar cursando <strong>análise e desenvolvimento de sistemas</strong>. Também é interessante acrescnertar que boa parte de meu conhecimento provém de maneira <strong>autodidata</strong>, ou seja, quase tudo que aprendi nos ultimos anos, aprendi por conta própria (tanto a programação quanto outras línguas).</p>
                 </article>
         </article>
-        <article class="topico" id="historiascolums">
-            <h2>Conhecimentos complementares</h2>
-            <p>Como pontos complementares, é interessante salientar meu prazer com a escrita, bem como, alguns anos desenvolvendo <strong>projetos de robótica</strong> no <strong>Instituto Federal</strong> do Paraná na ala conhecida como IfLab. Ademais, em virtude de nos encontrarmos em uma área que leva muito em conta os conhecimentos de <strong>linguas estrangeiras</strong>, realizei o <abbr title="International English Language Testing System (IELTS)">IELTS</abbr> (<strong>proficiência na lingua inglesa</strong>) e tenho como nota média 6.5 (<strong>intermediário/avançado</strong>).</p>
+        <article class="topico">
+                <h2>Conhecimentos complementares</h2>    
+            <article id="historia">
+                <p>Como pontos complementares, é interessante salientar meu prazer com a escrita, bem como, alguns anos desenvolvendo <strong>projetos de robótica</strong> no <strong>Instituto Federal</strong> do Paraná na ala conhecida como IfLab. Ademais, em virtude de nos encontrarmos em uma área que leva muito em conta os conhecimentos de <strong>linguas estrangeiras</strong>, realizei o <abbr title="International English Language Testing System (IELTS)">IELTS</abbr> (<strong>proficiência na lingua inglesa</strong>) e tenho como nota média 6.5 (<strong>intermediário/avançado</strong>).</p>
+            </article>
         </article>
         <article class="topico">
             <h2>Minha atuação como programador</h2>
