Att iframe parte 1

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <article class="topico">
             <h2>PORTIFÓLIO</h2>
             <h3>Trabalhos com HTML, CSS e JavaScript</h3>
-                <a href="https://github.com/AlanTesseroli/cooffeshop" target="_blank" ref="external"><img src="images/coffeeshop.png" alt="" class="trabalho" id="logos"></a>
+            <iframe src="https://alantesseroli.github.io/cooffeshop/" frameborder="0"><a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"></a><img src="images/coffeeshop.png" alt="" class="trabalho" id="logos"></a></iframe>
 
-                <a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"><img src="images/sagginprotese.png" alt="" class="trabalho" id="logos"></a>
+                <iframe src="https://alantesseroli.github.io/SagginProtese/" frameborder="0"><a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"></a><img src="images/sagginprotese.png" alt="" class="trabalho" id="logos"></a></iframe>
 
         </article>
 
