--- a/portfolio.html
+++ b/portfolio.html
@@ -7,16 +7,21 @@
     <title>Alan Tesseroli - História</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html" class="navigation">Home</a>
-            <a href="historia.html" class="navigation">História</a>
-            <a href="portfolio.html" class="navigation">Portifólio</a>
-            <a href="contato.html" class="navigation">Contato</a>
-        </nav>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+
+        <menu id="itens">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="historia.html">Historia</a></li>
+                <li><a href="portfolio.html">Portifolio</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </menu>
     </header>
 
     <div class="theme-switch-wrapper">
@@ -39,9 +44,9 @@
                     <img src="images/Corel3.jpg" alt="Site" class="trabalho">
                 
                     <h3>Trabalhos com HTML, CSS e JavaScript</h3>
-                    <a href="https://github.com/AlanTesseroli/cooffeshop" target="_blank" ref="external"><img src="images/coffeeshop.png" alt="Site" class="trabalho"></a>
+                    <iframe src="https://alantesseroli.github.io/cooffeshop/" frameborder="0"><a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"></a><img src="images/coffeeshop.png" alt="" class="trabalho" id="logos"></a></iframe>
 
-                    <a href="https://github.com/AlanTesseroli/SagginProtese" target="_blank" ref="external"><img src="images/sagginprotese.png" alt="Site" class="trabalho"></a>
+                    <iframe src="https://alantesseroli.github.io/SagginProtese/" frameborder="0"><a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"></a><img src="images/sagginprotese.png" alt="" class="trabalho" id="logos"></a></iframe>
 
                     <a href="https://github.com/AlanTesseroli/HTML/blob/main/desafio%202%20a.html" target="_blank" ref="external"><img src="images/siteexercicio.png" alt="Site Exercicio HTML" class="trabalho"></a>
                 <h3>Trabalhos com Python</h3>
