--- a/historia.html
+++ b/historia.html
@@ -7,16 +7,21 @@
     <title>Alan Tesseroli - História</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html" class="navigation">Home</a>
-            <a href="historia.html" class="navigation">História</a>
-            <a href="portfolio.html" class="navigation">Portifólio</a>
-            <a href="contato.html" class="navigation">Contato</a>
-        </nav>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+
+        <menu id="itens">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="historia.html">Historia</a></li>
+                <li><a href="portfolio.html">Portifolio</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </menu>
     </header>
 
     <div class="theme-switch-wrapper">
