Ajustes de responsividade

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,9 +44,13 @@
                     <img src="images/Corel3.jpg" alt="Site" class="trabalho">
                 
                     <h3>Trabalhos com HTML, CSS e JavaScript</h3>
-                    <iframe src="https://alantesseroli.github.io/cooffeshop/" frameborder="0"><a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"></a><img src="images/coffeeshop.png" alt="" class="trabalho" id="logos"></a></iframe>
+                    <iframe src="https://alantesseroli.github.io/cooffeshop/" frameborder="0"><a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"><a><img src="images/coffeeshop.png" alt="" class="trabalho" id="logos"></a></iframe>
 
-                    <iframe src="https://alantesseroli.github.io/SagginProtese/" frameborder="0"><a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"></a><img src="images/sagginprotese.png" alt="" class="trabalho" id="logos"></a></iframe>
+                    <a id="responsividadeiframe"><img src="images/coffeeshop.png" alt="" class="trabalho" id="logos"></a>
+
+                    <iframe src="https://alantesseroli.github.io/SagginProtese/" frameborder="0"><a href="https://alantesseroli.github.io/SagginProtese/" target="_blank" ref="external"><a><img src="images/sagginprotese.png" alt="" class="trabalho" id="logos"></a></iframe>
+
+                    <a id="responsividadeiframe"><img src="images/sagginprotese.png" alt="" class="trabalho" id="logos"></a>
 
                     <a href="https://github.com/AlanTesseroli/HTML/blob/main/desafio%202%20a.html" target="_blank" ref="external"><img src="images/siteexercicio.png" alt="Site Exercicio HTML" class="trabalho"></a>
                 <h3>Trabalhos com Python</h3>
